--- a/deno.json
+++ b/deno.json
@@ -12,9 +12,9 @@
 	"importMap": "deno.json",
 	"imports": {
 		"daisyui/": "https://esm.sh/daisyui@2.24.0/",
-		"postcss-nested": "https://cdn.skypack.dev/postcss-nested@5.0.6",
-		"autoprefixer": "https://jspm.dev/autoprefixer",
-		"postcss": "https://esm.sh/postcss@8.4.16",
+		"postcss-nested": "https://cdn.skypack.dev/postcss-nested@6.0.0",
+		"autoprefixer": "https://esm.sh/autoprefixer@10.4.13",
+		"postcss": "https://esm.sh/postcss@8.4.21",
 		"std/": "https://deno.land/std@0.153.0/",
 		"strip-indent": "https://esm.sh/strip-indent@4.0.0"
 	}
